vlib/v/checker/tests/fn_ptr_undereferenced_err.vv
module main

fn f_a() {
}

fn main() {
	f := f_a
	ref := &f
	deref := ref
	deref()
}
